# osdlyrics-z

aimp_lyrics/: My Mix.m3u8  config.json  iniciar.bat  instalar.bat  lrc_parser.py  lyrics_fetcher.py  main.py  osd_window.py  requirements.txt  testear.bat
aimp_lyrics/plugins/: Mi_playlist_Fred.txt
spotify_lyrics/: .env.example  .gitignore  README.md  config.json  iniciar.bat  instalar.bat  lrc_parser.py  lyrics_fetcher.py  main.py  osd_window.py  pyproject.toml  requirements.txt  spotify_connector.py  testear.bat
