[project]
name = "spotify-lyrics"
version = "1.0.0"
description = "OSD Lyrics para Spotify Desktop en Windows — letras sincronizadas karaoke"
requires-python = ">=3.10"
dependencies = [
    "spotipy>=2.23.0",
    "pywin32>=306",
]

[project.scripts]
spotify-lyrics = "main:main"

[tool.uv]
dev-dependencies = []
